--- a/GenomeAnalyzer/GenomeAnalyzer.csproj
+++ b/GenomeAnalyzer/GenomeAnalyzer.csproj
@@ -6,4 +6,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GenomeAnalyzer.DAL\GenomeAnalyzer.DAL\GenomeAnalyzer.DAL.csproj" />
+    </ItemGroup>
+
 </Project>
