--- a/GenomeAnalyzer.DAL/GenomeAnalyzer.DAL.csproj
+++ b/GenomeAnalyzer.DAL/GenomeAnalyzer.DAL.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -9,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\GenomeAnalyzer.Domain\GenomeAnalyzer.Domain.csproj" />
+      <ProjectReference Include="..\GenomeAnalyzer.Domain\GenomeAnalyzer.Domain.csproj" />
     </ItemGroup>
 
 </Project>
