Implemented functionality of adding GenomeEntity, main page was partly written

--- a/GenomeAnalyzer/GenomeAnalyzer.csproj
+++ b/GenomeAnalyzer/GenomeAnalyzer.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\GenomeAnalyzer.DAL\GenomeAnalyzer.DAL.csproj" />
+      <ProjectReference Include="..\GenomeAnalyzer.Services\GenomeAnalyzer.Services.csproj" />
     </ItemGroup>
 
 </Project>
