--- a/GenomeAnalyzer/GenomeAnalyzer.csproj
+++ b/GenomeAnalyzer/GenomeAnalyzer.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.15" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.15" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15" />
     </ItemGroup>
@@ -14,6 +15,10 @@
     <ItemGroup>
       <ProjectReference Include="..\GenomeAnalyzer.DAL\GenomeAnalyzer.DAL.csproj" />
       <ProjectReference Include="..\GenomeAnalyzer.Services\GenomeAnalyzer.Services.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Genome\Edit.cshtml" />
     </ItemGroup>
 
 </Project>
