--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "chartjs": "^4.2.1"
+    "chartjs": "^4.2.1",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4"
   }
 }
